--- a/Take_Home_3/Index.html
+++ b/Take_Home_3/Index.html
@@ -103,7 +103,7 @@
     </section>
     
 
-    <!-- Tour Guide Section: Introduction to the tour guide with a humorous bio -->
+    <!-- Tour Guide Section: Introduction to the tour guide  -->
     <section id="tour-guide" class="section tour-guide">
         <div class="guide-info">
             <h2>Meet Your Tour Guide</h2>
